# gravity-bridge

./: Makefile  go.mod  go.sum  init-test-node.sh  readme.md
.github/workflows/: automated-release.yml  go.yml  integration-tests.yml
integration_tests/: chain.go  gorc_bootstrap.sh  happy_path_test.go  keys.go  orchestrator.go  sandbox_test.go  setup_test.go  transaction_stress_test.go  validator.go  validator_out_test.go  valset_stress_test.go
integration_tests/ethereum/: Dockerfile  hardhat.config.ts  package-lock.json  package.json
module/: Makefile  go.mod  go.sum
module/app/: app.go  export.go  sim_test.go  state.go  utils.go
orchestrator/: Dockerfile
orchestrator/cosmos_gravity/: Cargo.toml
orchestrator/cosmos_gravity/src/: build.rs  crypto.rs  query.rs  send.rs
orchestrator/ethereum_gravity/: Cargo.toml
orchestrator/ethereum_gravity/src/: deploy_erc20.rs  erc20_utils.rs  logic_call.rs  send_to_cosmos.rs  submit_batch.rs  utils.rs
orchestrator/gorc/: Cargo.toml
orchestrator/gravity_abi/: Cargo.toml  Gravity.json
orchestrator/gravity_abi_build/: Cargo.toml
orchestrator/gravity_utils/: Cargo.toml
orchestrator/orchestrator/: Cargo.toml
orchestrator/register_delegate_keys/: Cargo.toml
orchestrator/relayer/: Cargo.toml
orchestrator/test_runner/: Cargo.toml
solidity/: package-lock.json  package.json
solidity/contracts/: EthGravityWrapper.sol  Gravity.sol  ReentrantERC20.sol
solidity/test/: arbitrary-logic.ts  deployERC20.ts  ethGravityWrapper.ts  happy-path.ts  migration.ts  sendToCronos.ts  submitBatch-vs-logicCall.ts  submitBatch.ts
testnet/: chain.go  go.mod  go.sum  orchestrator.go  validator.go  with_pristine_e2e_environment_test.go
(+61 files in other folders)
