[package]
name = "cosmos_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {path = "../gravity_utils"}
ethereum_gravity = {path = "../ethereum_gravity"}
gravity_proto = {path = "../gravity_proto/"}

deep_space = { git = "https://github.com/crypto-org-chain/deep_space/", branch = "update/deps" }
ethers = { version = "1", features = ["abigen"] }
thiserror = "1"
clarity = "0.4.11"
serde = "1.0"
log = "0.4"
sha3 = "0.9"
tokio = "1.4"
web30 = "0.15.4"
tonic = { version = "0.4.0", features = ["tls", "tls-roots"] }
cosmos-sdk-proto = "0.6.3"
prost = "0.7"
prost-types = "0.8"
bytes = "1"

[dev-dependencies]
env_logger = "0.8"
rand = "0.8"
actix = "0.12"

[features]
ethermint = []
