[package]
name = "ethereum_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_abi = { path = "../gravity_abi" }
gravity_utils = { path = "../gravity_utils" }
gravity_proto = { path = "../gravity_proto" }

deep_space = { git = "https://github.com/sankofa-foundation/deep_space/", branch = "update/deps" }
ethers = { version = "1", features = ["abigen"] }
clarity = "0.4.11"
web30 = "0.15.4"
log = "0.4"
sha3 = "0.9"
tokio = "1.13.0"
tonic = { version = "0.4.0", features = ["tls", "tls-roots"] }
